# authernet

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  input.txt  main.cpp
rtaudio/: CMakeLists.txt  rtaudio.cpp
src/: acoustic.rs  athernet.rs  bit_iter.rs  bit_set.rs  carrier.rs  coding.rs  crc.rs  crc_add.rs  mac.rs  main.rs  module.rs  physical.rs  replay.rs  rtaudio.rs  utils.rs  wave.rs
src/athernet/: mac.rs  mod.rs  physical.rs
src/wire/: ipv4.rs  mod.rs  udp.rs
