[package]
name = "network"
version = "0.1.0"
authors = ["Kaiyuan Xu <xuky@shanghaitech.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
cpal = { version = "0.12.1", features = ["asio"] }
#cpal = "0.12.1"
lazy_static = "1.4.0"
